// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoicesWithMultipleAnswers question with input sequence ["Coyote", "Coyote", "Wolf", "Wolf", "Coyote"] (randomize order true except for ["I don't know", "Other"]): data 1`] = `
Object {
  "Coyote": true,
  "Fox": false,
  "I don't know": false,
  "Lynx": false,
  "Other": false,
  "Panda": false,
  "Wolf": false,
}
`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Coyote", "Coyote", "Wolf", "Wolf", "Coyote"] (randomize order true except for ["I don't know", "Other"]): displayed list 1`] = `
Array [
  "Lynx",
  "Coyote",
  "Wolf",
  "Panda",
  "Fox",
  "Other",
  "I don't know",
]
`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Coyote", "Lynx", "Wolf", "Fox", "Coyote", "I don't know"] (randomize order true except for ["Wolf", "Fox", "Other", "I don't know"]): data 1`] = `
Object {
  "Coyote": false,
  "Fox": true,
  "I don't know": true,
  "Lynx": true,
  "Other": false,
  "Panda": false,
  "Wolf": true,
}
`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Coyote", "Lynx", "Wolf", "Fox", "Coyote", "I don't know"] (randomize order true except for ["Wolf", "Fox", "Other", "I don't know"]): displayed list 1`] = `
Array [
  "Lynx",
  "Panda",
  "Coyote",
  "Wolf",
  "Fox",
  "Other",
  "I don't know",
]
`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Coyote", "Wolf", "Fox", "Lynx", "Panda", "Other", "Coyote", "Wolf", "Fox", "Lynx", "Panda", "Other", "I don't know"] (randomize order true except for undefined): data 1`] = `
Object {
  "Coyote": false,
  "Fox": false,
  "I don't know": true,
  "Lynx": false,
  "Other": false,
  "Panda": false,
  "Wolf": false,
}
`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Coyote", "Wolf", "Fox", "Lynx", "Panda", "Other", "Coyote", "Wolf", "Fox", "Lynx", "Panda", "Other", "I don't know"] (randomize order true except for undefined): displayed list 1`] = `
Array [
  "Lynx",
  "I don't know",
  "Wolf",
  "Panda",
  "Other",
  "Fox",
  "Coyote",
]
`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Fox"] (randomize order true except for ["Other", "I don't know"]): data 1`] = `
Object {
  "Coyote": false,
  "Fox": true,
  "I don't know": false,
  "Lynx": false,
  "Other": false,
  "Panda": false,
  "Wolf": false,
}
`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Fox"] (randomize order true except for ["Other", "I don't know"]): displayed list 1`] = `
Array [
  "Lynx",
  "Coyote",
  "Wolf",
  "Panda",
  "Fox",
  "Other",
  "I don't know",
]
`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Lynx", "Panda", "Other"] (randomize order true except for ["Other"]): data 1`] = `
Object {
  "Coyote": false,
  "Fox": false,
  "I don't know": false,
  "Lynx": true,
  "Other": true,
  "Panda": true,
  "Wolf": false,
}
`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Lynx", "Panda", "Other"] (randomize order true except for ["Other"]): displayed list 1`] = `
Array [
  "Lynx",
  "Coyote",
  "Wolf",
  "Panda",
  "I don't know",
  "Fox",
  "Other",
]
`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Wolf", "Coyote"] (randomize order false except for undefined): data 1`] = `
Object {
  "Coyote": true,
  "Fox": false,
  "I don't know": false,
  "Lynx": false,
  "Other": false,
  "Panda": false,
  "Wolf": true,
}
`;

exports[`ChoicesWithMultipleAnswers question with input sequence ["Wolf", "Coyote"] (randomize order false except for undefined): displayed list 1`] = `
Array [
  "Wolf",
  "Fox",
  "Coyote",
  "Lynx",
  "Panda",
  "Other",
  "I don't know",
]
`;

exports[`ChoicesWithMultipleAnswers question with input sequence [] (randomize order false except for undefined): data 1`] = `
Object {
  "Coyote": false,
  "Fox": false,
  "I don't know": false,
  "Lynx": false,
  "Other": false,
  "Panda": false,
  "Wolf": false,
}
`;

exports[`ChoicesWithMultipleAnswers question with input sequence [] (randomize order false except for undefined): displayed list 1`] = `
Array [
  "Wolf",
  "Fox",
  "Coyote",
  "Lynx",
  "Panda",
  "Other",
  "I don't know",
]
`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Coyote", "Coyote", "Wolf", "Wolf", "Coyote"] (randomize order true except for ["I don't know", "Other"]): data 1`] = `"Coyote"`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Coyote", "Coyote", "Wolf", "Wolf", "Coyote"] (randomize order true except for ["I don't know", "Other"]): displayed list 1`] = `
Array [
  "Lynx",
  "Coyote",
  "Wolf",
  "Panda",
  "Fox",
  "Other",
  "I don't know",
]
`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Coyote", "Lynx", "Wolf", "Fox", "Coyote", "I don't know"] (randomize order true except for ["Wolf", "Fox", "Other", "I don't know"]): data 1`] = `"I don't know"`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Coyote", "Lynx", "Wolf", "Fox", "Coyote", "I don't know"] (randomize order true except for ["Wolf", "Fox", "Other", "I don't know"]): displayed list 1`] = `
Array [
  "Lynx",
  "Panda",
  "Coyote",
  "Wolf",
  "Fox",
  "Other",
  "I don't know",
]
`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Coyote", "Wolf", "Fox", "Lynx", "Panda", "Other", "Coyote", "Wolf", "Fox", "Lynx", "Panda", "Other", "I don't know"] (randomize order true except for undefined): data 1`] = `"I don't know"`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Coyote", "Wolf", "Fox", "Lynx", "Panda", "Other", "Coyote", "Wolf", "Fox", "Lynx", "Panda", "Other", "I don't know"] (randomize order true except for undefined): displayed list 1`] = `
Array [
  "Lynx",
  "I don't know",
  "Wolf",
  "Panda",
  "Other",
  "Fox",
  "Coyote",
]
`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Fox"] (randomize order true except for ["Other", "I don't know"]): data 1`] = `"Fox"`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Fox"] (randomize order true except for ["Other", "I don't know"]): displayed list 1`] = `
Array [
  "Lynx",
  "Coyote",
  "Wolf",
  "Panda",
  "Fox",
  "Other",
  "I don't know",
]
`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Lynx", "Panda", "Other"] (randomize order true except for ["Other"]): data 1`] = `"Other"`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Lynx", "Panda", "Other"] (randomize order true except for ["Other"]): displayed list 1`] = `
Array [
  "Lynx",
  "Coyote",
  "Wolf",
  "Panda",
  "I don't know",
  "Fox",
  "Other",
]
`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Wolf", "Coyote"] (randomize order false except for undefined): data 1`] = `"Coyote"`;

exports[`ChoicesWithSingleAnswer question with input sequence ["Wolf", "Coyote"] (randomize order false except for undefined): displayed list 1`] = `
Array [
  "Wolf",
  "Fox",
  "Coyote",
  "Lynx",
  "Panda",
  "Other",
  "I don't know",
]
`;

exports[`ChoicesWithSingleAnswer question with input sequence [] (randomize order false except for undefined): displayed list 1`] = `
Array [
  "Wolf",
  "Fox",
  "Coyote",
  "Lynx",
  "Panda",
  "Other",
  "I don't know",
]
`;

exports[`YesNo question with input false: displayed list 1`] = `
Array [
  "Yes",
  "No",
]
`;

exports[`YesNo question with input true: displayed list 1`] = `
Array [
  "Yes",
  "No",
]
`;
